--- a/biblio.bib
+++ b/biblio.bib
@@ -34,6 +34,14 @@
 	year = {1987},
 	month = {},
 }
+@book {BerghLofstrom1976,
+	author = {Bergh, J{\"o}ran and L{\"o}fstrom, J{\"o}rgen},
+	title = {Interpolation Spaces. An Introduction},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1976},
+	month = {},
+}
 @article {Berker1951,
 	author = {Berker, Ratip},
 	title = {Sur certaines propri\'eti\'es de l'effort qui s'exerce sur une paroi en contact avec un fluide visqueux},
@@ -54,6 +62,16 @@
 	year = {1967},
 	month = {},
 	edition = {},
+}
+@book {Chabrowski1991,
+	author = {Chabrowski, Jan},
+	title = {The {D}irichlet Problem with $L^2$-Boundary Data for Elliptic Linear Systems},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	series = {Lecture Notes in Mathematics},
+	volume = {1482},
+	year = {1991},
+	month = {},
 }
 @book {ChoquetBruhatDewittMoretteDillardBleick,
 	author = {Choquet-Bruhat, Yvonne and DeWitt-Morette, C\'ecile and Dillard-Bleick, Margaret},
@@ -91,6 +109,16 @@
 	number = {4},
 	pages = {787--815},
 	issn = {},
+}
+@book {ColemanMarkovitzNoll1966,
+	author = {Coleman, Bernard D. and Markovitz, Hershel and Noll, Walter},
+	title = {Viscometric Flows of Non-{N}ewtonian Fluids. {T}heory and Experiment},
+	series = {Springer Tracts in Natural Philosophy},
+	volume = {5},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1966},
+	month = {},
 }
 @article {ColemanNoll1959,
 	author = {Coleman, Bernard D. and Noll, Walter},
@@ -505,6 +533,15 @@
 	address = {},
 	year = {1895},
 }
+@book {Lavrentiev1967,
+	author = {Lavrentiev, M. M.},
+	title = {Some Improperly Posed Problems of Mathematical Physics},
+	series = {Springer Tracts in Natural Philosophy},
+	volume = {11},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1967},
+}
 @book {Lighthill1964,
 	author = {Lighthill, M. James},
 	title = {Fourier Analysis and Generalised Functions},
@@ -554,6 +591,14 @@
 	publisher = {Springer},
 	address = {Dordrecht Heidelberg New York London},
 	year = {2013},
+}
+@book {Mazja1985,
+	author = {Maz'ja, Vladimir G.},
+	title = {Sobolev Spaces},
+	series = {Springer Series in Soviet Mathematics},
+	publisher = {Springer},
+	address = {New York},
+	year = {1985},
 }
 @book {Meyer1982,
 	author = {Meyer, Richard E.},
