Added Hellwig translation.

--- a/biblio.bib
+++ b/biblio.bib
@@ -360,6 +360,14 @@
 	month = {},
 	note = {English translation 1964, {\it Partial Differential Equations: an Introduction}, Blaisdell}
 }
+@book {Hellwig1964,
+	author = {Hellwig, G\"unter},
+	title = {Partial Differential Equations},
+	publisher = {Blaisdell},
+	address = {New York},
+	year = {1964},
+	month = {},
+}
 @article {Helmholtz1858,
 	author = {von Helmholtz, Hermann},
 	title = {{\"U}ber {I}ntegrale der hydrodynamischen {G}leichungen, welche den {W}irbelbewegungen entsprechen},
