--- a/biblio.bib
+++ b/biblio.bib
@@ -592,6 +592,15 @@
 	year = {1962},
 	month = {},
 }
+@book {Marti1969,
+	author = {Marti, J\"urg T.},
+	title = {Introduction to the Theory of Bases},
+	series = {Springer Tracts in Natural Philosophy},
+	volume = {18},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1969},
+}
 @book {Maugin2013,
 	author = {Maugin, G\'erard A.},
 	title = {Continuum Mechanics Through the Twentieth Century},
