Added an entry for Folland.

--- a/biblio.bib
+++ b/biblio.bib
@@ -232,6 +232,15 @@
 	month = {},
 	note = {Reprint 1970, Chelsea Publications, Bronx, New York}
 }
+@book {Folland1976,
+	author = {Folland, Gerald B.},
+	title = {Introduction to Partial Differential Equations},
+	edition = {},
+	publisher = {Princeton University Press},
+	address = {},
+	year = {1976},
+	month = {},
+}
 @book {Frankel2012,
 	author = {Frankel, Theodore},
 	title = {The Geometry of Physics: an Introduction},
@@ -761,6 +770,17 @@
 	publisher = {North-Holland},
 	address = {Amsterdam},
 	year = {1959},
+}
+@book {Oberhettinger1973,
+	author = {Oberhettinger, Fritz},
+	title = {Fourier Transforms of Distributions and Their Inverses: a Collection of Tables},
+	series = {Probability and Mathematical Statistics},
+	volume = {16},
+	publisher = {Academic Press},
+	address = {New York},
+	year = {1973},
+	note = {Reprinted 2014},
+	month = {},
 }
 @article {Odqvist1930,
 	author = {Odqvist, Folke K. G.},
