--- a/biblio.bib
+++ b/biblio.bib
@@ -63,6 +63,14 @@
 	month = {},
 	edition = {},
 }
+@book {Cartan1971,
+	author = {Cartan, Henri},
+	title = {Differential Forms},
+	publisher = {Hermann},
+	address = {Paris},
+	year = {1971},
+	month = {},
+}
 @book {Chabrowski1991,
 	author = {Chabrowski, Jan},
 	title = {The {D}irichlet Problem with $L^2$-Boundary Data for Elliptic Linear Systems},
@@ -167,6 +175,14 @@
 	number = {3},
 	pages = {886--922},
 }
+@book {Einstein1926,
+	author = {Einstein, Albert},
+	title = {Investigations on the Theory of the {B}rownian Movement},
+	publisher = {Methuen},
+	address = {London},
+	year = {1926},
+	month = {reprinted 1956, Dover Publications, New York},
+}
 @book {Erdelyi1956,
 	author = {Erd\'elyi, Arthur},
 	title = {Asymptotic Expansions},
@@ -230,7 +246,7 @@
 	series = {},
 	year = {1871},
 	month = {},
-	note = {Reprint 1970, Chelsea Publications, Bronx, New York}
+	note = {reprinted 1970, Chelsea Publications, Bronx, New York}
 }
 @book {Folland1976,
 	author = {Folland, Gerald B.},
@@ -485,6 +501,17 @@
 	year = {1982},
 	month = {},
 }
+@book {Jost2013,
+	author = {Jost, J\"urgen},
+	title = {Partial Differential Equations},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	series = {Graduate Texts in Mathematics},
+	volume = {214},
+	edition = {third},
+	year = {2013},
+	month = {},
+}
 @article {Joseph2006,
 	author = {Joseph, Daniel D.},
 	title = {Potential flow of viscous fluids: historical notes},
@@ -509,7 +536,7 @@
 	publisher = {Springer-Verlag},
 	year = {1929},
 	month = {},
-	note = {Reprint 1953, Dover Publications, New York}
+	note = {reprinted 1953, Dover Publications, New York}
 }
 @book {KimKarrila2005,
 	author = {Kim, Sangtae and Karrila, Seppo J.},
@@ -518,7 +545,7 @@
 	address = {New York},
 	year = {2005},
 	month = {},
-	note = {Reprint of 1991 edition, Butterworth-Heinemann, Boston and London},
+	note = {reprint of 1991 edition, Butterworth-Heinemann, Boston and London},
 }
 @book {KiralEringen1990,
 	author = {Kiral, Ehran and Eringen, A. Cemal},
@@ -550,6 +577,15 @@
 	address = {},
 	year = {1895},
 }
+@book {Landis1997,
+	author = {Landis, Evgeni\u{i} M.},
+	title = {Second Order Equations of Elliptic and Parabolic Type},
+	series = {Translations of Mathematical Monographs},
+	volume = {171},
+	publisher = {American Mathematical Society},
+	address = {Providence, Rhode Island},
+	year = {1997},
+}
 @book {Lavrentiev1967,
 	author = {Lavrentiev, M. M.},
 	title = {Some Improperly Posed Problems of Mathematical Physics},
@@ -568,6 +604,13 @@
 	year = {1964},
 	month = {},
 }
+@book {Lin1967,
+	author = {Lin, C. C.},
+	title = {The Theory of Hydrodynamic Stability},
+	publisher = {Cambridge University Press},
+	address = {New York},
+	year = {1967},
+}
 @book {Liu2002,
 	author = {Liu, I-{S}hih},
 	title = {Continuum Mechanics},
@@ -581,7 +624,7 @@
 	publisher = {Cambridge University Press},
 	address = {},
 	year = {1927},
-	note = {Reprint 1944, Dover Publications, New York},
+	note = {reprinted 1944, Dover Publications, New York},
 }
 @book {MagnusOberhettingerSoni1966,
 	author = {Magnus, Wilhelm and Oberhettinger, Fritz and Soni, Raj P.},
@@ -736,7 +779,7 @@
 	volume = {1},
 	address = {},
 	year = {1890},
-	note = {Reprint 2003, Dover Publications, New York},
+	note = {reprinted 2003, Dover Publications, New York},
 	month = {},
 }
 @book {Niven1890b,
@@ -746,7 +789,7 @@
 	volume = {2},
 	address = {},
 	year = {1890},
-	note = {Reprint 2003, Dover Publications, New York},
+	note = {reprinted 2003, Dover Publications, New York},
 	month = {},
 }
 @article {Noll1958,
@@ -779,7 +822,7 @@
 	publisher = {Academic Press},
 	address = {New York},
 	year = {1973},
-	note = {Reprinted 2014},
+	note = {reprinted 2014},
 	month = {},
 }
 @article {Odqvist1930,
@@ -844,7 +887,7 @@
 	address = {New York},
 	year = {1997},
 	month = {},
-	note = {Reprint of 1962 edition, Interscience Publishers, New York}
+	note = {reprint of 1962 edition, Interscience Publishers, New York}
 }
 @book {PrandtlTietjens1957,
 	author = {Prandtl, Ludwig and Tietjens, Oskar K. G.},
@@ -853,7 +896,7 @@
 	address = {New York},
 	year = {1957},
 	month = {},
-	note = {Reprint of 1934 edition}
+	note = {reprint of 1934 edition}
 }
 @article {ProudmanPearson1957,
 	author = {Proudman, Ian and Pearson, J. R. A.},
@@ -905,6 +948,16 @@
 	volume = {22},
 	pages = {139--158},
 	issn = {1945-5844; 0030-8730/e},
+}
+@book {Ruzicka2000,
+	author = {R{\r{u}}{\v{z}}i{\v{c}}ka, Michael},
+	title = {Electrorheological Fluids: Modeling and Mathematical Theory},
+	series = {Lecture Notes in Mathematics},
+	volume = {1748},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {2000},
+	month = {},
 }
 @book {Schlichting1960,
 	author = {Schlichting, Hermann},
@@ -1178,6 +1231,16 @@
 	publisher = {Plenum Press},
 	address = {New York},
 	year = {1979},
+	month = {},
+}
+@book {Watson2012,
+	author = {Watson, Neil A.},
+	title = {Introduction to Heat Potential Theory},
+	series = {Mathematical Surveys and Monographs},
+	volume = {182},
+	publisher = {American Mathematical Society},
+	address = {Providence, Rhode Island},
+	year = {2012},
 	month = {},
 }
 @book {Zimmer1990,
