Changed notes with "reprinted" to "Reprinted."

--- a/biblio.bib
+++ b/biblio.bib
@@ -181,7 +181,7 @@
 	publisher = {Methuen},
 	address = {London},
 	year = {1926},
-	month = {reprinted 1956, Dover Publications, New York},
+	month = {Reprinted 1956, Dover Publications, New York},
 }
 @book {Erdelyi1956,
 	author = {Erd\'elyi, Arthur},
@@ -246,7 +246,7 @@
 	series = {},
 	year = {1871},
 	month = {},
-	note = {reprinted 1970, Chelsea Publications, Bronx, New York}
+	note = {Reprinted 1970, Chelsea Publications, Bronx, New York}
 }
 @book {Folland1976,
 	author = {Folland, Gerald B.},
@@ -536,7 +536,7 @@
 	publisher = {Springer-Verlag},
 	year = {1929},
 	month = {},
-	note = {reprinted 1953, Dover Publications, New York}
+	note = {Reprinted 1953, Dover Publications, New York}
 }
 @book {KimKarrila2005,
 	author = {Kim, Sangtae and Karrila, Seppo J.},
@@ -545,7 +545,7 @@
 	address = {New York},
 	year = {2005},
 	month = {},
-	note = {reprint of 1991 edition, Butterworth-Heinemann, Boston and London},
+	note = {Reprint of 1991 edition, Butterworth-Heinemann, Boston and London},
 }
 @book {KiralEringen1990,
 	author = {Kiral, Ehran and Eringen, A. Cemal},
@@ -624,7 +624,7 @@
 	publisher = {Cambridge University Press},
 	address = {},
 	year = {1927},
-	note = {reprinted 1944, Dover Publications, New York},
+	note = {Reprinted 1944, Dover Publications, New York},
 }
 @book {MagnusOberhettingerSoni1966,
 	author = {Magnus, Wilhelm and Oberhettinger, Fritz and Soni, Raj P.},
@@ -779,7 +779,7 @@
 	volume = {1},
 	address = {},
 	year = {1890},
-	note = {reprinted 2003, Dover Publications, New York},
+	note = {Reprinted 2003, Dover Publications, New York},
 	month = {},
 }
 @book {Niven1890b,
@@ -789,7 +789,7 @@
 	volume = {2},
 	address = {},
 	year = {1890},
-	note = {reprinted 2003, Dover Publications, New York},
+	note = {Reprinted 2003, Dover Publications, New York},
 	month = {},
 }
 @article {Noll1958,
@@ -822,7 +822,7 @@
 	publisher = {Academic Press},
 	address = {New York},
 	year = {1973},
-	note = {reprinted 2014},
+	note = {Reprinted 2014},
 	month = {},
 }
 @article {Odqvist1930,
@@ -887,7 +887,7 @@
 	address = {New York},
 	year = {1997},
 	month = {},
-	note = {reprint of 1962 edition, Interscience Publishers, New York}
+	note = {Reprint of 1962 edition, Interscience Publishers, New York}
 }
 @book {PrandtlTietjens1957,
 	author = {Prandtl, Ludwig and Tietjens, Oskar K. G.},
@@ -896,7 +896,7 @@
 	address = {New York},
 	year = {1957},
 	month = {},
-	note = {reprint of 1934 edition}
+	note = {Reprint of 1934 edition}
 }
 @article {ProudmanPearson1957,
 	author = {Proudman, Ian and Pearson, J. R. A.},
