Added Joseph's "Stability of Fluid Motions."

--- a/biblio.bib
+++ b/biblio.bib
@@ -512,6 +512,28 @@
 	year = {2013},
 	month = {},
 }
+@book {Joseph1976a,
+	author = {Joseph, Daniel D.},
+	title = {Stability of Fluid Motions {I}},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	series = {Springer Tracts in Natural Philosophy},
+	volume = {27},
+	edition = {},
+	year = {1976},
+	month = {},
+}
+@book {Joseph1976b,
+	author = {Joseph, Daniel D.},
+	title = {Stability of Fluid Motions {II}},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	series = {Springer Tracts in Natural Philosophy},
+	volume = {28},
+	edition = {},
+	year = {1976},
+	month = {},
+}
 @article {Joseph2006,
 	author = {Joseph, Daniel D.},
 	title = {Potential flow of viscous fluids: historical notes},
