--- a/biblio.bib
+++ b/biblio.bib
@@ -847,6 +847,14 @@
 	note = {Reprinted 2014},
 	month = {},
 }
+@book {Oberhettinger1990,
+	author = {Oberhettinger, Fritz},
+	title = {Tables of Fourier Transforms and Fourier Transforms of Distributions},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1990},
+	month = {},
+}
 @article {Odqvist1930,
 	author = {Odqvist, Folke K. G.},
 	title = {{\"U}ber die {R}andwertaufgaben der {H}ydrodynamik z\"aher {F}l\"ussigkeiten},
