--- a/biblio.bib
+++ b/biblio.bib
@@ -617,6 +617,16 @@
 	address = {New York},
 	year = {1967},
 }
+@book {LiebLoss2001,
+	author = {Lieb, Elliot H. and Loss, Michael},
+	title = {Analysis},
+	series = {Graduate Studies in Mathematics},
+	volume = {14},
+	publisher = {American Mathematical Society},
+	address = {Providence, Rhode Island},
+	edition = {second},
+	year = {2001},
+}
 @book {Lighthill1964,
 	author = {Lighthill, M. James},
 	title = {Fourier Analysis and Generalised Functions},
