--- a/biblio.bib
+++ b/biblio.bib
@@ -128,6 +128,16 @@
 	year = {1966},
 	month = {},
 }
+@book {ColtonKress1992,
+	author = {Colton, David and Kress, Rainer},
+	title = {Inverse Acoustic and Electromagnetic Scattering Theory},
+	series = {Applied Mathematical Sciences},
+	volume = {93},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1992},
+	month = {},
+}
 @article {ColemanNoll1959,
 	author = {Coleman, Bernard D. and Noll, Walter},
 	title = {On certain steady flows of general fluids},
@@ -157,6 +167,14 @@
 	month = {},
 	volume = {II},
 	edition = {},
+}
+@book {Deimling1985,
+	author = {Deimling, Klaus},
+	title = {Nonlinear Functional Analysis},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1985},
+	month = {},
 }
 @book {DeRham1955,
 	author = {{d}e {R}ham, Georges},
@@ -577,12 +595,48 @@
 	year = {1990},
 	month = {},
 }
+@book {KolmogorovFomin1957,
+	author = {Kolmogorov, Andrey N. and Fomin, Sergei V.},
+	title = {Elements of the Theory of Functions and Functional Analysis I.
+		Metric and Normed Spaces},
+	publisher = {Graylock Press},
+	address = {Rochester, New York},
+	year = {1957},
+	month = {},
+}
+@book {KolmogorovFomin1961,
+	author = {Kolmogorov, Andrey N. and Fomin, Sergei V.},
+	title = {Elements of the Theory of Functions and Functional Analysis II.
+	       	Measure. The Lebesgue Integral. Hilbert Space},
+	publisher = {Graylock Press},
+	address = {Baltimore, Maryland},
+	year = {1961},
+	month = {},
+}
 @book {KoshlyakovSmirnovGliner1964,
 	author = {Koshlyakov, N. S. and Smirnov, M. M. and Gliner, E. B.},
 	title = {Differential Equations of Mathematical Physics},
 	publisher = {North-Holland Publishing Company},
 	address = {Amsterdam},
 	year = {1964},
+	month = {},
+}
+@book {Kress1989,
+	author = {Kress, Rainer},
+	title = {Linear Integral Equations},
+	series = {Applied Mathematical Sciences},
+	volume = {82},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1989},
+	month = {},
+}
+@book {Kupradze1965,
+	author = {Kupradze, Viktor D.},
+	title = {Potential Methods in the Theory of Elasticity},
+	publisher = {Israel Program for Scientific Translations},
+	address = {Jerusalem},
+	year = {1965},
 	month = {},
 }
 @book {Ladyzhenskaya1963,
@@ -616,6 +670,16 @@
 	publisher = {Springer-Verlag},
 	address = {New York},
 	year = {1967},
+}
+@book {Lee2013,
+	author = {Lee, John M.},
+	title = {Introduction to Smooth Manifolds},
+	series = {Graduate Texts in Mathematics},
+	volume = {218},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	edition = {second},
+	year = {2013},
 }
 @book {LiebLoss2001,
 	author = {Lieb, Elliot H. and Loss, Michael},
@@ -701,6 +765,19 @@
 	address = {New York},
 	year = {1985},
 }
+@incollection {Mazya1991,
+	author = {Maz'ya, Vladimir G.},
+	title = {Boundary Integral Equations},
+	pages = {128--222},
+	editor = {Maz'ya, Vladimir G. and Nikolski{\u{\i}}, Sergey M.},
+	booktitle = {Analysis IV. Linear and Boundary Integral Equations},
+	series = {Encyclopaedia of Mathematical Sciences},
+	volume = {27},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1991},
+	month = {},
+}
 @book {Meyer1982,
 	author = {Meyer, Richard E.},
 	title = {Introduction to Mathematical Fluid Dynamics},
@@ -754,17 +831,28 @@
 	volume = {},
 	pages = {},
 }
+@book {Mitrinovic1970,
+	author = {Mitrinovi\'c, Dragoslav S.},
+	title = {Analytic Inequalities},
+	series = {Die {G}rundlehren der mathematischen {W}issenschaften in {E}inzeldarstellungen},
+	volume = {165},
+	publisher = {Springer-Verlag},
+	year = {1970},
+}
 @book {Morita2001,
 	author = {Morita, Shigeyuki},
 	title = {Geometry of Differential Forms},
-	series = {Translations of Mathematical Monographs 201},
+	series = {Translations of Mathematical Monographs},
+	volume = {201},
 	publisher = {American Mathematical Society},
+	address = {Providence, Rhode Island},
 	year = {2001},
 }
 @book {Muller1957,
 	author = {M{\"u}ller, Claus},
 	title = {Grundprobleme der mathematischen {T}heorie elektromagnetischer {S}chwingungen},
-	series = {Die {G}rundlehren der mathematischen {W}issenschaften in {E}inzeldarstellungen 88},
+	series = {Die {G}rundlehren der mathematischen {W}issenschaften in {E}inzeldarstellungen},
+	volume = {88},
 	publisher = {Springer-Verlag},
 	address = {Berlin},
 	year = {1957},
@@ -912,6 +1000,17 @@
 	year = {1927},
 	month = {},
 }
+@book {Pazy1983,
+	author = {Pazy, Amnon},
+	title = {Semigroups of Linear Operators and Applications to Partial Differential Equations},
+	series = {Applied Mathematical Sciences},
+	volume = {44},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1983},
+	note = {Second printing},
+	month = {},
+}
 @book {Phillips1933,
 	author = {Phillips, Henry B.},
 	title = {Vector Analysis},
@@ -937,6 +1036,19 @@
 	year = {1957},
 	month = {},
 	note = {Reprint of 1934 edition}
+}
+@incollection {Prossdorf1991,
+	author = {Pr{\"o}ssdorf, Siegfried},
+	title = {Linear Integral Equations},
+	pages = {1--125},
+	editor = {Maz'ya, Vladimir G. and Nikolski{\u{\i}}, Sergey M.},
+	booktitle = {Analysis IV. Linear and Boundary Integral Equations},
+	series = {Encyclopaedia of Mathematical Sciences},
+	volume = {27},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1991},
+	month = {},
 }
 @article {ProudmanPearson1957,
 	author = {Proudman, Ian and Pearson, J. R. A.},
