--- a/biblio.bib
+++ b/biblio.bib
@@ -184,6 +184,14 @@
 	year = {1955},
 	month = {},
 }
+@book {Doetsch1943,
+	author = {Doetsch, Gustav},
+	title = {Theorie und {A}nwendung der {L}aplace-{T}ransformation},
+	publisher = {Dover Publications},
+	address = {New York},
+	year = {1943},
+	month = {},
+}
 @article {Duering2009,
 	author = {Deuring, Paul},
 	title = {Spatial decay of time-dependent {O}seen flows},
@@ -1393,6 +1401,16 @@
 	publisher = {American Mathematical Society},
 	address = {Providence, Rhode Island},
 	year = {2012},
+	month = {},
+}
+@book {Weidmann1980,
+	author = {Weidmann, Joachim},
+	title = {Linear Operators in Hilbert Space},
+	series = {Graduate Texts in Mathematics},
+	volume = {68},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1980},
 	month = {},
 }
 @book {Zimmer1990,
