--- a/biblio.bib
+++ b/biblio.bib
@@ -856,6 +856,27 @@
 	address = {Providence, Rhode Island},
 	year = {2001},
 }
+@book {MorseFeshbach1953,
+	author = {Morse, Phillip M. and Feshbach, Herman},
+	title = {Methods of Theoretical Physics},
+	publisher = {McGraw-Hill Book Company},
+	address = {New York},
+	year = {1953},
+}
+@book {MorseFeshbach1953i,
+	author = {Morse, Phillip M. and Feshbach, Herman},
+	title = {Methods of Theoretical Physics, part {I}},
+	publisher = {McGraw-Hill Book Company},
+	address = {New York},
+	year = {1953},
+}
+@book {MorseFeshbach1953ii,
+	author = {Morse, Phillip M. and Feshbach, Herman},
+	title = {Methods of Theoretical Physics, part {II}},
+	publisher = {McGraw-Hill Book Company},
+	address = {New York},
+	year = {1953},
+}
 @book {Muller1957,
 	author = {M{\"u}ller, Claus},
 	title = {Grundprobleme der mathematischen {T}heorie elektromagnetischer {S}chwingungen},
@@ -872,6 +893,13 @@
 	publisher = {Pitman},
 	address = {London},
 	year = {1985},
+}
+@book {Muskhelishvili1958,
+	author = {Muskhelishvili, Nikolai I.},
+	title = {Singular Integral Equations},
+	publisher = {P. Noordhoff N. V.},
+	address = {Groningen},
+	year = {1958},
 }
 %% https://archive.org/details/s3id13207870/page/244/mode/2up?q=navier
 @article {Navier1821,
