--- a/biblio.bib
+++ b/biblio.bib
@@ -639,6 +639,19 @@
 	year = {1989},
 	month = {},
 }
+@incollection {KudryavtsevNikolskii1991,
+	author = {Kudryavtsev, Lev D. and Nikol'ski{\u{\i}}, Sergey M.},
+	title = {Spaces of Differentiable Functions of Several Variables and Imbedding Theorems},
+	pages = {1--140},
+	editor = {Nikol'ski{\u{\i}}, Sergey M.},
+	booktitle = {Analysis III. Spaces of Differentiable Functions},
+	series = {Encyclopaedia of Mathematical Sciences},
+	volume = {26},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1991},
+	month = {},
+}
 @book {Kupradze1965,
 	author = {Kupradze, Viktor D.},
 	title = {Potential Methods in the Theory of Elasticity},
@@ -773,7 +786,20 @@
 	address = {New York},
 	year = {1985},
 }
-@incollection {Mazya1991,
+@incollection {Mazya1991a,
+	author = {Maz'ya, Vladimir G.},
+	title = {Classes of Domains, Measures and Capacities in the Theory of Differentiable Functions},
+	pages = {141--211},
+	editor = {Nikol'ski{\u{\i}}, Sergey M.},
+	booktitle = {Analysis III. Spaces of Differentiable Functions},
+	series = {Encyclopaedia of Mathematical Sciences},
+	volume = {26},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1991},
+	month = {},
+}
+@incollection {Mazya1991b,
 	author = {Maz'ya, Vladimir G.},
 	title = {Boundary Integral Equations},
 	pages = {128--222},
@@ -1429,6 +1455,19 @@
 	publisher = {American Mathematical Society},
 	address = {Providence, Rhode Island},
 	year = {2012},
+	month = {},
+}
+@incollection {WehausenLaitone1960,
+	author = {Wehausen, John V. and Laitone, Edmund V.},
+	title = {Surface waves},
+	pages = {TBD},
+	editor = {Fl\"ugge, Siegfried},
+	booktitle = {Fluid Dynamics II},
+	series = {Encyclopedia of Physics},
+	volume = {IX},
+	publisher = {Springer-Verlag},
+	address = {Berlin},
+	year = {1960},
 	month = {},
 }
 @book {Weidmann1980,
