--- a/biblio.bib
+++ b/biblio.bib
@@ -803,7 +803,7 @@
 	author = {Maz'ya, Vladimir G.},
 	title = {Boundary Integral Equations},
 	pages = {128--222},
-	editor = {Maz'ya, Vladimir G. and Nikolski{\u{\i}}, Sergey M.},
+	editor = {Maz'ya, Vladimir G. and Nikol'ski{\u{\i}}, Sergey M.},
 	booktitle = {Analysis IV. Linear and Boundary Integral Equations},
 	series = {Encyclopaedia of Mathematical Sciences},
 	volume = {27},
@@ -1103,7 +1103,7 @@
 	author = {Pr{\"o}ssdorf, Siegfried},
 	title = {Linear Integral Equations},
 	pages = {1--125},
-	editor = {Maz'ya, Vladimir G. and Nikolski{\u{\i}}, Sergey M.},
+	editor = {Maz'ya, Vladimir G. and Nikol'ski{\u{\i}}, Sergey M.},
 	booktitle = {Analysis IV. Linear and Boundary Integral Equations},
 	series = {Encyclopaedia of Mathematical Sciences},
 	volume = {27},
