--- a/biblio.bib
+++ b/biblio.bib
@@ -34,6 +34,16 @@
 	year = {1987},
 	month = {},
 }
+@book {BennettSharpley1988,
+	author = {Bennett, Colin and Sharpley, Robert},
+	title = {Interpolation of Operators},
+	series = {Pure and Applied Mathematics},
+	volume = {129},
+	publisher = {Academic Press},
+	address = {New York},
+	year = {1988},
+	month = {},
+}
 @book {BerghLofstrom1976,
 	author = {Bergh, J{\"o}ran and L{\"o}fstrom, J{\"o}rgen},
 	title = {Interpolation Spaces. An Introduction},
@@ -62,6 +72,19 @@
 	year = {1967},
 	month = {},
 	edition = {},
+}
+@incollection {Cabannes1960,
+	author = {Cabannes, Henri},
+	title = {Th\'eorie des ondes de choc},
+	pages = {162--224},
+	editor = {Fl\"ugge, Siegfried},
+	booktitle = {Fluid Dynamics {III}},
+	series = {Encyclopedia of Physics},
+	volume = {IX},
+	publisher = {Springer-Verlag},
+	address = {Berlin},
+	year = {1960},
+	month = {},
 }
 @book {Cartan1971,
 	author = {Cartan, Henri},
@@ -334,6 +357,19 @@
 	volume = {3},
 	publisher = {Academic Press},
 	year = {1967},
+	month = {},
+}
+@incollection {Gilbarg1960,
+	author = {Gilbarg, David},
+	title = {Jets and cavities},
+	pages = {311-445},
+	editor = {Fl\"ugge, Siegfried},
+	booktitle = {Fluid Dynamics {III}},
+	series = {Encyclopedia of Physics},
+	volume = {IX},
+	publisher = {Springer-Verlag},
+	address = {Berlin},
+	year = {1960},
 	month = {},
 }
 @book {GilbargTrudinger1983,
@@ -812,6 +848,19 @@
 	year = {1991},
 	month = {},
 }
+@incollection {Meyer1960,
+	author = {Meyer, Richard E.},
+	title = {Theory of characteristics of inviscid gas dynamics},
+	pages = {225--282},
+	editor = {Fl\"ugge, Siegfried},
+	booktitle = {Fluid Dynamics {III}},
+	series = {Encyclopedia of Physics},
+	volume = {IX},
+	publisher = {Springer-Verlag},
+	address = {Berlin},
+	year = {1960},
+	month = {},
+}
 @book {Meyer1982,
 	author = {Meyer, Richard E.},
 	title = {Introduction to Mathematical Fluid Dynamics},
@@ -1253,6 +1302,16 @@
 	year = {1986},
 	month = {},
 }
+@book {Smart1974,
+	author = {Smart, D. R.},
+	title = {Fixed Point Theorems},
+	series = {Cambridge Tracts in Mathematics},
+	volume = {66},
+	publisher = {Cambridge University Press},
+	address = {},
+	year = {1974},
+	month = {},
+}
 @book {Smith1994,
 	author = {Smith, Gerald F.},
 	title = {Constitutive Equations for Anisotropic and Isotropic Materials},
@@ -1351,6 +1410,19 @@
 	volume = {8},
 	number = {1},
 	pages = {77--98},
+}
+@incollection {Timman1960,
+	author = {Timman, Reinier},
+	title = {Linearized theory of unsteady flow of a compressible fluid},
+	pages = {283--310},
+	editor = {Fl\"ugge, Siegfried},
+	booktitle = {Fluid Dynamics {III}},
+	series = {Encyclopedia of Physics},
+	volume = {IX},
+	publisher = {Springer-Verlag},
+	address = {Berlin},
+	year = {1960},
+	month = {},
 }
 @book {Triebel1983,
 	author = {Triebel, Hans},
@@ -1460,9 +1532,22 @@
 @incollection {WehausenLaitone1960,
 	author = {Wehausen, John V. and Laitone, Edmund V.},
 	title = {Surface waves},
-	pages = {TBD},
+	pages = {446--778},
 	editor = {Fl\"ugge, Siegfried},
-	booktitle = {Fluid Dynamics II},
+	booktitle = {Fluid Dynamics {III}},
+	series = {Encyclopedia of Physics},
+	volume = {IX},
+	publisher = {Springer-Verlag},
+	address = {Berlin},
+	year = {1960},
+	month = {},
+}
+@incollection {Shiffer1960,
+	author = {Schiffer, Menahem},
+	title = {Analytical theory of subsonic and supersonic flows},
+	pages = {1--161},
+	editor = {Fl\"ugge, Siegfried},
+	booktitle = {Fluid Dynamics {III}},
 	series = {Encyclopedia of Physics},
 	volume = {IX},
 	publisher = {Springer-Verlag},
