--- a/biblio.bib
+++ b/biblio.bib
@@ -207,6 +207,15 @@
 	year = {1955},
 	month = {},
 }
+@book {Dezin1987,
+	author = {Dezin, Aleksei A.},
+	title = {Partial Differential Equations},
+	series = {Springer Series in Soviet Mathematics},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1987},
+	month = {},
+}
 @book {Doetsch1943,
 	author = {Doetsch, Gustav},
 	title = {Theorie und {A}nwendung der {L}aplace-{T}ransformation},
