--- a/biblio.bib
+++ b/biblio.bib
@@ -712,6 +712,15 @@
 	address = {New York},
 	year = {1963},
 }
+@book {Ladyzhenskaya1985,
+	author = {Ladyzhenskaya, Olga A.},
+	title = {The Boundary Value Problems of Mathematical Physics},
+	series = {Applied Mathematical Sciences},
+	volume = {49},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1985},
+}
 @book {Lamb1895,
 	author = {Lamb, Horace},
 	title = {Hydrodynamics},
