Switched to biblatex and biber.

--- a/biblio.bib
+++ b/biblio.bib
@@ -3,7 +3,7 @@
 	title = {Manifolds, Tensor Analysis, and Applications},
 	series = {Applied Mathematical Sciences},
 	volume = {75},
-	edition = {second},
+	edition = {Second edition},
 	publisher = {Springer},
 	address = {New York},
 	year = {1988},
@@ -24,7 +24,7 @@
 	address = {New York},
 	year = {2011},
 	month = {},
-	edition = {fifth},
+	edition = {Fifth edition},
 }
 @book {Batchelor1987,
 	author = {Batchelor, George K.},
@@ -111,7 +111,7 @@
 	address = {New York},
 	year = {1982},
 	month = {},
-	edition = {revised},
+	edition = {Revised edition},
 }
 @book {ChorinMarsden1990,
 	author = {Chorin, Alexandre J. and Marsden, Jerrold E.},
@@ -120,7 +120,7 @@
 	address = {Berlin},
 	year = {1990},
 	month = {},
-	edition = {second},
+	edition = {Second edition},
 	annot = {Zbl has second edition 1990 and third edition 1993}
 }
 @book {Chung1988,
@@ -233,6 +233,36 @@
 	number = {3},
 	pages = {886--922},
 }
+@book {DunfordSchwartz1958,
+	author = {Dunford, Nelson and Schwartz, Jacob T.},
+	title = {Linear Operators. Part I: General Theory},
+	series = {Pure and Applied Mathematics},
+	volume = {7},
+	publisher = {John Wiley \& Sons},
+	address = {New York},
+	year = {1958},
+	month = {},
+}
+@book {DunfordSchwartz1971,
+	author = {Dunford, Nelson and Schwartz, Jacob T.},
+	title = {Linear Operators. Part III: Spectral Operators},
+	series = {Pure and Applied Mathematics},
+	volume = {7},
+	publisher = {John Wiley \& Sons},
+	address = {New York},
+	year = {1971},
+	month = {},
+}
+@book {DunfordSchwartz1963,
+	author = {Dunford, Nelson and Schwartz, Jacob T.},
+	title = {Linear Operators. Part II: Spectral Theory},
+	series = {Pure and Applied Mathematics},
+	volume = {7},
+	publisher = {John Wiley \& Sons},
+	address = {New York},
+	year = {1963},
+	month = {},
+}
 @book {Einstein1926,
 	author = {Einstein, Albert},
 	title = {Investigations on the Theory of the {B}rownian Movement},
@@ -280,7 +310,7 @@
 	title = {Partial Differential Equations},
 	series = {Graduate Studies in Mathematics},
 	volume = {19},
-	edition = {second},
+	edition = {Second edition},
 	publisher = {American Mathematical Society},
 	address = {Providence, Rhode Island},
 	year = {2010},
@@ -318,7 +348,7 @@
 @book {Frankel2012,
 	author = {Frankel, Theodore},
 	title = {The Geometry of Physics: an Introduction},
-	edition = {third},
+	edition = {Third edition},
 	publisher = {Cambridge University Press},
 	address = {},
 	year = {2012},
@@ -338,7 +368,7 @@
 	publisher = {Wiley},
 	address = {New York},
 	year = {1978},
-	edition = {third},
+	edition = {Third edition},
 	month = {},
 }
 @book {Galdi1994,
@@ -388,7 +418,7 @@
 	volume = {224},
 	publisher = {Springer-Verlag},
 	address = {New York},
-	edition = {second},
+	edition = {Second edition},
 	year = {1983},
 	month = {},
 }
@@ -397,7 +427,7 @@
 	title = {First Course in Functional Analysis},
 	publisher = {Chelsea Publishing Company},
 	address = {New York},
-	edition = {second},
+	edition = {Second edition},
 	year = {1983},
 	month = {},
 }
@@ -406,7 +436,7 @@
 	title = {Table of Integrals, Series, and Products},
 	publisher = {Academic Press},
 	address = {New York},
-	edition = {fourth},
+	edition = {Fourth edition},
 	year = {1980},
 	month = {},
 }
@@ -568,7 +598,7 @@
 	address = {New York},
 	series = {Applied Mathematical Sciences},
 	volume = {1},
-	edition = {fourth},
+	edition = {Fourth edition},
 	year = {1982},
 	month = {},
 }
@@ -579,7 +609,7 @@
 	address = {New York},
 	series = {Graduate Texts in Mathematics},
 	volume = {214},
-	edition = {third},
+	edition = {Third edition},
 	year = {2013},
 	month = {},
 }
@@ -753,7 +783,7 @@
 	volume = {218},
 	publisher = {Springer-Verlag},
 	address = {New York},
-	edition = {second},
+	edition = {Second edition},
 	year = {2013},
 }
 @book {LiebLoss2001,
@@ -763,7 +793,7 @@
 	volume = {14},
 	publisher = {American Mathematical Society},
 	address = {Providence, Rhode Island},
-	edition = {second},
+	edition = {Second edition},
 	year = {2001},
 }
 @book {Lighthill1964,
@@ -789,6 +819,13 @@
 	address = {New York},
 	year = {2002},
 }
+@book {LiusternikSobolev1961,
+	author = {Liusternik, Lazar A. and Sobolev, Vladimir J.},
+	title = {Elements of Functional Analysis},
+	publisher = {Frederick Unger},
+	address = {New York},
+	year = {1961},
+}
 @book {Love1927,
 	author = {Love, Augustus E. H.},
 	title = {A Treatise on the Mathematical Theory of Elasticity},
@@ -803,7 +840,7 @@
 	series = {Die {G}rundlehren der mathematischen},
 	publisher = {Springer-Verlag},
 	address = {New York},
-	edition = {third},
+	edition = {Third edition},
 	year = {1966},
 }
 @book {Marchand1962,
@@ -912,7 +949,7 @@
 	title = {Theoretical Aerodynamics},
 	publisher = {Dover Publications},
 	address = {New York},
-	edition = {fourth},
+	edition = {Fourth edition},
 	year = {1973},
 }
 @book {MilneThomson1996,
@@ -920,7 +957,7 @@
 	title = {Theoretical Hydrodynamics},
 	publisher = {Dover Publications},
 	address = {New York},
-	edition = {fifth},
+	edition = {Fifth edition},
 	year = {1996},
 }
 @misc {Mei2002,
@@ -1309,7 +1346,7 @@
 	pages = {051201},
 	issn = {},
 }
-@incollection {Silhavy1986a,
+@incollection {Silhavy1986,
 	author = {{\u{S}}ilhav\'y, Miroslav},
 	title = {Foundations of continuum thermodynamics},
 	pages = {33--48},
