--- a/biblio.bib
+++ b/biblio.bib
@@ -316,6 +316,45 @@
 	year = {2010},
 	month = {},
 }
+@incollection {Evgrafov1989,
+	author = {Evgrafov, Marat A.},
+	title = {Series and Integral Representations},
+	pages = {1--81},
+	editor = {Gamkrelidze, Revaz V.},
+	booktitle = {Analysis I. Integral Representations and Asymptotic Methods},
+	series = {Encyclopaedia of Mathematical Sciences},
+	volume = {13},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1989},
+	month = {},
+}
+@incollection {Fedoryuk1989a,
+	author = {Fedoryuk, M. V.},
+	title = {Asymptotic Methods in Analysis},
+	pages = {83--191},
+	editor = {Gamkrelidze, Revaz V.},
+	booktitle = {Analysis I. Integral Representations and Asymptotic Methods},
+	series = {Encyclopaedia of Mathematical Sciences},
+	volume = {13},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1989},
+	month = {},
+}
+@incollection {Fedoryuk1989b,
+	author = {Fedoryuk, M. V.},
+	title = {Integral Transforms},
+	pages = {193--232},
+	editor = {Gamkrelidze, Revaz V.},
+	booktitle = {Analysis I. Integral Representations and Asymptotic Methods},
+	series = {Encyclopaedia of Mathematical Sciences},
+	volume = {13},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {1989},
+	month = {},
+}
 @book {FerrareseBini2008,
 	author = {Ferrarese, Giorigio and Bini, Donato},
 	title = {Introduction to Relativistic Continuum Mechanics},
