--- a/biblio.bib
+++ b/biblio.bib
@@ -412,7 +412,7 @@
 }
 @book {Galdi1994,
 	author = {Galdi, Giovanni P.},
-	title = {An Introduction to the Mathematical Theory of the {N}avier-{S}tokes Equations. Volume I. Linearized Steady Problems},
+	title = {An Introduction to the Mathematical Theory of the {N}avier-{S}tokes Equations. Volume I. Linearised Steady Problems},
 	series = {Springer Tracts in Natural Philosophy},
 	volume = {38},
 	publisher = {Springer-Verlag},
