Changed reprint notes to addenda.

--- a/biblio.bib
+++ b/biblio.bib
@@ -86,6 +86,14 @@
 	year = {1960},
 	month = {},
 }
+@book {Cambel1963,
+	author = {Cambel, Ali B.},
+	title = {Plasma Physics and Magnetofluidmechanics},
+	publisher = {McGraw-Hill},
+	address = {New York},
+	year = {1963},
+	month = {},
+}
 @book {Cartan1971,
 	author = {Cartan, Henri},
 	title = {Differential Forms},
@@ -269,7 +277,7 @@
 	publisher = {Methuen},
 	address = {London},
 	year = {1926},
-	month = {Reprinted 1956, Dover Publications, New York},
+	addendum = {Reprinted New York: Dover Publications, 1956},
 }
 @book {Erdelyi1956,
 	author = {Erd\'elyi, Arthur},
@@ -373,7 +381,7 @@
 	series = {},
 	year = {1871},
 	month = {},
-	note = {Reprinted 1970, Chelsea Publications, Bronx, New York}
+	addendum = {Reprinted Bronx, New York: Chelsea Publications, 1970}
 }
 @book {Folland1976,
 	author = {Folland, Gerald B.},
@@ -698,7 +706,7 @@
 	publisher = {Springer-Verlag},
 	year = {1929},
 	month = {},
-	note = {Reprinted 1953, Dover Publications, New York}
+	addendum = {Reprinted New York: Dover Publications, 1953}
 }
 @book {KimKarrila2005,
 	author = {Kim, Sangtae and Karrila, Seppo J.},
@@ -707,7 +715,7 @@
 	address = {New York},
 	year = {2005},
 	month = {},
-	note = {Reprint of 1991 edition, Butterworth-Heinemann, Boston and London},
+	addendum = {Reprint of Boston and London: Butterworth-Heinemann, 1991},
 }
 @book {KiralEringen1990,
 	author = {Kiral, Ehran and Eringen, A. Cemal},
@@ -871,7 +879,7 @@
 	publisher = {Cambridge University Press},
 	address = {},
 	year = {1927},
-	note = {Reprinted 1944, Dover Publications, New York},
+	addendum = {Reprinted New York: Dover Publications, 1944},
 }
 @book {MagnusOberhettingerSoni1966,
 	author = {Magnus, Wilhelm and Oberhettinger, Fritz and Soni, Raj P.},
@@ -1104,7 +1112,7 @@
 	volume = {1},
 	address = {},
 	year = {1890},
-	note = {Reprinted 2003, Dover Publications, New York},
+	addendum = {Reprinted New York: Dover Publications, 2003},
 	month = {},
 }
 @book {Niven1890b,
@@ -1114,7 +1122,7 @@
 	volume = {2},
 	address = {},
 	year = {1890},
-	note = {Reprinted 2003, Dover Publications, New York},
+	addendum = {Reprinted New York: Dover Publications, 2003},
 	month = {},
 }
 @article {Noll1958,
@@ -1147,7 +1155,7 @@
 	publisher = {Academic Press},
 	address = {New York},
 	year = {1973},
-	note = {Reprinted 2014},
+	addendum = {Reprinted 2014},
 	month = {},
 }
 @book {Oberhettinger1990,
@@ -1231,7 +1239,7 @@
 	address = {New York},
 	year = {1997},
 	month = {},
-	note = {Reprint of 1962 edition, Interscience Publishers, New York}
+	addendum = {Reprint of New York: Interscience Publishers, 1963}
 }
 @book {PrandtlTietjens1957,
 	author = {Prandtl, Ludwig and Tietjens, Oskar K. G.},
@@ -1240,7 +1248,7 @@
 	address = {New York},
 	year = {1957},
 	month = {},
-	note = {Reprint of 1934 edition}
+	addendum = {Reprint of 1934 edition}
 }
 @incollection {Prossdorf1991,
 	author = {Pr{\"o}ssdorf, Siegfried},
@@ -1374,6 +1382,19 @@
 	year = {1986},
 	month = {},
 }
+@incollection {Shiffer1960,
+	author = {Schiffer, Menahem},
+	title = {Analytical theory of subsonic and supersonic flows},
+	pages = {1--161},
+	editor = {Fl\"ugge, Siegfried},
+	booktitle = {Fluid Dynamics {III}},
+	series = {Encyclopedia of Physics},
+	volume = {IX},
+	publisher = {Springer-Verlag},
+	address = {Berlin},
+	year = {1960},
+	month = {},
+}
 @article {ShuChwang2001,
 	author = {Shu, Jian-Jun and Chwang, Allen T.},
 	title = {Generalized fundamental solutions for unsteady viscous flows},
@@ -1422,6 +1443,21 @@
 	volume = {45},
 	number = {},
 	pages = {529--531},
+}
+@book {Sneddon1951,
+	author = {Sneddon, Ian N.},
+	title = {Fourier Transforms},
+	publisher = {McGraw-Hill},
+	address = {New York},
+	year = {1951},
+	addendum = {Reprinted New York: Dover Publications, 1995},
+}
+@book {Sneddon1956,
+	author = {Sneddon, Ian N.},
+	title = {Special Functions of Mathematical Physics and Chemistry},
+	publisher = {Interscience Publishers},
+	address = {New York},
+	year = {1956},
 }
 @article {Solonnikov1968,
 	author = {Solonnikov, Vsevolod A.},
@@ -1627,19 +1663,6 @@
 	author = {Wehausen, John V. and Laitone, Edmund V.},
 	title = {Surface waves},
 	pages = {446--778},
-	editor = {Fl\"ugge, Siegfried},
-	booktitle = {Fluid Dynamics {III}},
-	series = {Encyclopedia of Physics},
-	volume = {IX},
-	publisher = {Springer-Verlag},
-	address = {Berlin},
-	year = {1960},
-	month = {},
-}
-@incollection {Shiffer1960,
-	author = {Schiffer, Menahem},
-	title = {Analytical theory of subsonic and supersonic flows},
-	pages = {1--161},
 	editor = {Fl\"ugge, Siegfried},
 	booktitle = {Fluid Dynamics {III}},
 	series = {Encyclopedia of Physics},
