--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,7 @@
 \usepackage[american]{babel}
 \usepackage{csquotes}
 %%\usepackage[style=alphabetic,backend=biber,texencoding=ascii]{biblatex}
-\usepackage[style=draft,backend=biber,texencoding=ascii]{biblatex}
+\usepackage[style=alphabetic,backend=biber,texencoding=ascii]{biblatex}
 \addbibresource{biblio.bib}
 \addbibresource{eringen.bib}
 \addbibresource{thermodynamics.bib}
