--- a/biblio.bib
+++ b/biblio.bib
@@ -226,7 +226,7 @@
 }
 @book {Doetsch1943,
 	author = {Doetsch, Gustav},
-	title = {Theorie und {A}nwendung der {L}aplace-{T}ransformation},
+	title = {Theorie und {A}nwendung der {L}aplace-{T}rans\-for\-ma\-tion},
 	publisher = {Dover Publications},
 	address = {New York},
 	year = {1943},
@@ -1095,15 +1095,15 @@
 	address = {Princeton, New Jersey},
 	year = {1959},
 }
-@misc {NIST:DLMF,
-	key = {{\relax DLMF}},
+@online {NIST:DLMF,
+	label = {DLMF},
 	title = {{NIST} {D}igital {L}ibrary of {M}athematical Functions},
 	howpublished = {http://dlmf.nist.gov/, Release 1.1.1 of 2021-03-15},
-	url = {\url{http://dlmf.nist.gov/}},
-	note = {Olver, Frank W. J. and Olde Daalhuis, Adri B. and Lozier, Daniel W.
-	      	and Schneider, Barry I. and Boisvert, Ronald F. and Clark, Charles W.
-	     	and Miller, Bruce R. and Saunders, Bonita V.
-		and Cohl, Howard S. and Mc{C}lain, Marjorie A., editors}
+	url = {http://dlmf.nist.gov/},
+	addendum = {Frank W. J. Olver, Adri B. Olde Daalhuis, Daniel W. Lozier,
+	      	Barry I. Schneider, Ronald F. Boisvert, Charles W. Clark, 
+	     	Bruce R. Miller, Bonita V. Saunders, Howard S. Cohl, 
+		Marjorie A. Mc{C}lain, editors}
 }
 @book {Niven1890a,
 	editor = {Niven, W. D.},
@@ -1146,6 +1146,16 @@
 	publisher = {North-Holland},
 	address = {Amsterdam},
 	year = {1959},
+}
+@book {Oberhettinger1957,
+	author = {Oberhettinger, Fritz},
+	title = {Tabellen zur {F}ourier {T}ransformation},
+	series = {Die Grundlehren der mathematischen {W}issenshaften in {E}inzeldarstellungen},
+	volume = {90},
+	publisher = {Springer-Verlag},
+	address = {Berlin},
+	year = {1957},
+	month = {},
 }
 @book {Oberhettinger1973,
 	author = {Oberhettinger, Fritz},
