--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,8 @@
 \nocite{*}
 %%%\bibliographystyle{alpha}
 %%%\bibliography{biblio,eringen,thermodynamics}
+{\small
 \printbibliography
+}
 \end{document}
 
