--- a/biblio.bib
+++ b/biblio.bib
@@ -224,13 +224,16 @@
 	year = {1987},
 	month = {},
 }
-@book {Doetsch1943,
+@book {Doetsch1937,
 	author = {Doetsch, Gustav},
 	title = {Theorie und {A}nwendung der {L}aplace-{T}rans\-for\-ma\-tion},
-	publisher = {Dover Publications},
-	address = {New York},
-	year = {1943},
+	series = {Die {G}rundlehren der mathematischen {W}issenschaften in Einzeldarstellungen mit besonderer {B}er\"ucksichtigung der {A}nwendungsebiete},
+	volume = {47},
+	publisher = {Springer-Verlag},
+	address = {Berlin},
+	year = {1937},
 	month = {},
+	addendum = {Reprinted New York: Dover Publications, 1943},
 }
 @article {Duering2009,
 	author = {Deuring, Paul},
