--- a/biblio.bib
+++ b/biblio.bib
@@ -233,7 +233,7 @@
 	address = {Berlin},
 	year = {1937},
 	month = {},
-	addendum = {Reprinted New York: Dover Publications, 1943},
+	addendum = {Re\-printed New York: Dover Publications, 1943},
 }
 @article {Duering2009,
 	author = {Deuring, Paul},
@@ -887,7 +887,8 @@
 @book {MagnusOberhettingerSoni1966,
 	author = {Magnus, Wilhelm and Oberhettinger, Fritz and Soni, Raj P.},
 	title = {Formulas and Theorems for the Special Functions of Mathematical Physics},
-	series = {Die {G}rundlehren der mathematischen},
+	series = {Die {G}rundlehren der mathematischen {W}issenschaften in {E}inzeldarstellungen},
+	volume = {52},
 	publisher = {Springer-Verlag},
 	address = {New York},
 	edition = {Third edition},
